fixed a few things

--- a/Lab 06/Lab 06.vcxproj
+++ b/Lab 06/Lab 06.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="point2d.cpp" />
+    <ClCompile Include="rectangletype.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="point2d.h" />
