--- a/Lab 06/Lab 06.vcxproj.filters
+++ b/Lab 06/Lab 06.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="point2d.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="rectangletype.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="point2d.h">
